--- a/portfolio.html
+++ b/portfolio.html
@@ -8,112 +8,121 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header class="header">
-        <nav class="navigation">
-            <a class="header-logo link" href="./index.html">Web<span class="color">Studio</span></a>
-            <ul class="site-nav list">
-                <li class="list-nav"><a class="link-nav link" href="./index.html">Studio</a></li>
-                <li class="list-nav"><a class="link-nav link" href="./portfolio.html">Portfolio</a></li>
-                <li class="list-nav"><a class="link-nav link" href="">Contacts</a></li>
-            </ul>
-        </nav>
-        <address class="contacts">
-            <ul class="contacts-item list">
-                <li>
-                    <a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li>
-                    <a class="contact-link link" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
-                </li>
-            </ul>
-        </address>
+        <div class="container">
+          <nav class="navigation">
+              <a class="header-logo link" href="./index.html">Web<span class="color">Studio</span></a>
+              <ul class="site-nav list">
+                  <li class="list-nav"><a class="link-nav link" href="./index.html">Studio</a></li>
+                  <li class="list-nav"><a class="link-nav link" href="./portfolio.html">Portfolio</a></li>
+                  <li class="list-nav"><a class="link-nav link" href="">Contacts</a></li>
+              </ul>
+          </nav>
+          <address class="contacts">
+              <ul class="contacts-item list">
+                  <li>
+                      <a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                  </li>
+                  <li>
+                      <a class="contact-link link" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
+                  </li>
+              </ul>
+          </address>
+        </div>
     </header>
    <main>
        <section class="portfoilo-section">
-        <h1 class="visually-hidden">our work</h1>
-         <ul class="list-btn list">
-            <li><button type="button" class="portfolio-btn link">All</button></li>
-            <li><button type="button" class="portfolio-btn link">Web Site</button></li>
-            <li><button type="button" class="portfolio-btn link">App</button></li>
-            <li><button type="button" class="portfolio-btn link">Design</button></li>
-            <li><button type="button" class="portfolio-btn link">Marketing</button></li>
-         </ul>
-           <!-- What are we doing -->
-            <ul class="list-presentation list">
+        <div class="container">
+          <h1 class="visually-hidden">our work</h1>
+           <ul class="list-btn list">
+              <li><button type="button" class="portfolio-btn link">All</button></li>
+              <li><button type="button" class="portfolio-btn link">Web Site</button></li>
+              <li><button type="button" class="portfolio-btn link">App</button></li>
+              <li><button type="button" class="portfolio-btn link">Design</button></li>
+              <li><button type="button" class="portfolio-btn link">Marketing</button></li>
+           </ul>
+             <!-- What are we doing -->
+              <ul class="list-presentation list">
+                <li class="list-made">
+                  <a href="" class="list-img link">
+              <img src="./images/img8.jpg" alt="banking app interface" width="360">
+              <h2 class="title-portfolio">Banking App Interface Concept</h2>
+              <p class="text-portfolio">App</p>
+              </a>
+              </li>
+                <li class="list-made">
+                  <a href="" class="list-img link">
+              <img src="./images/img9.jpg" alt="image of qr code on phone" width="360">
+              <h2 class="title-portfolio">Cashless Payment</h2>
+              <p class="text-portfolio">Marketing</p>
+              </a>
+              </li>
+                <li class="list-made">
+                  <a href="" class="list-img link">
+              <img src="./images/img10.jpg" alt="laptop" width="360">
+              <h2 class="title-portfolio">Meditation App</h2>
+              <p class="text-portfolio">App</p>
+              </a>
+              </li>
+                <li class="list-made"> 
+                  <a href="" class="list-img link">
+              <img src="./images/img11.jpg" alt="car interior" width="360">
+              <h2 class="title-portfolio">Taxi Service</h2>
+              <p class="text-portfolio">Marketing</p>
+              </a>
+              </li>
+                <li>
+                  <a href="" class="list-img link">
+              <img src="./images/img12.jpg" alt="phone desktop" width="360">
+              <h2 class="title-portfolio">Screen Illustrations</h2>
+              <p class="text-portfolio">Design</p>
+              </a>
+              </li>
+                <li class="list-made">
+                  <a href="" class="list-img link">
+              <img src="./images/img13.jpg" alt="girl in glasses" width="360">
+              <h2 class="title-portfolio">Online Courses</h2>
+              <p class="text-portfolio">Marketing</p>
+              </a>
+              </li>
               <li class="list-made">
-                <a href="" class="list-img link">
-            <img src="./images/img8.jpg" alt="banking app interface" width="360">
-            <h2 class="title-portfolio">Banking App Interface Concept</h2>
-            <p class="text-portfolio">App</p>
-            </a>
-            </li>
-              <li class="list-made">
-                <a href="" class="list-img link">
-            <img src="./images/img9.jpg" alt="image of qr code on phone" width="360">
-            <h2 class="title-portfolio">Cashless Payment</h2>
-            <p class="text-portfolio">Marketing</p>
-            </a>
-            </li>
-              <li class="list-made">
-                <a href="" class="list-img link">
-            <img src="./images/img10.jpg" alt="laptop" width="360">
-            <h2 class="title-portfolio">Meditation App</h2>
-            <p class="text-portfolio">App</p>
-            </a>
-            </li>
-              <li class="list-made"> 
-                <a href="" class="list-img link">
-            <img src="./images/img11.jpg" alt="car interior" width="360">
-            <h2 class="title-portfolio">Taxi Service</h2>
-            <p class="text-portfolio">Marketing</p>
-            </a>
-            </li>
-              <li>
-                <a href="" class="list-img link">
-            <img src="./images/img12.jpg" alt="phone desktop" width="360">
-            <h2 class="title-portfolio">Screen Illustrations</h2>
-            <p class="text-portfolio">Design</p>
-            </a>
-            </li>
-              <li class="list-made">
-                <a href="" class="list-img link">
-            <img src="./images/img13.jpg" alt="girl in glasses" width="360">
-            <h2 class="title-portfolio">Online Courses</h2>
-            <p class="text-portfolio">Marketing</p>
-            </a>
-            </li>
-            <li class="list-made">
-                <a href="" class="list-img link">
-            <img src="./images/img14.jpg" alt="instagram stories" width="360">
-            <h2 class="title-portfolio">Instagram Stories Concept</h2>
-            <p class="text-portfolio">Design</p>
-            </a>
-            </li>
-              <li class="list-made">
-                <a href="" class="list-img link">
-            <img src="./images/img15.jpg" alt="bag with vegetables" width="360">
-            <h2 class="title-portfolio">Organic Food</h2>
-            <p class="text-portfolio">Web Site</p>
-            </a>
-            </li>
-              <li class="list-made">
-                <a href="" class="list-img link">
-            <img src="./images/img16.jpg" alt="coffee cup pattern" width="360">
-            <h2 class="title-portfolio">Fresh Coffee</h2>
-            <p class="text-portfolio">Web Site</p>
-            </a>
-            </li>
-        </ul>
+                  <a href="" class="list-img link">
+              <img src="./images/img14.jpg" alt="instagram stories" width="360">
+              <h2 class="title-portfolio">Instagram Stories Concept</h2>
+              <p class="text-portfolio">Design</p>
+              </a>
+              </li>
+                <li class="list-made">
+                  <a href="" class="list-img link">
+              <img src="./images/img15.jpg" alt="bag with vegetables" width="360">
+              <h2 class="title-portfolio">Organic Food</h2>
+              <p class="text-portfolio">Web Site</p>
+              </a>
+              </li>
+                <li class="list-made">
+                  <a href="" class="list-img link">
+              <img src="./images/img16.jpg" alt="coffee cup pattern" width="360">
+              <h2 class="title-portfolio">Fresh Coffee</h2>
+              <p class="text-portfolio">Web Site</p>
+              </a>
+              </li>
+          </ul>
+        </div>
     </section>
    </main>
 <footer class="footer">
-    <a class="logo-footer link" href="./index.html">Web<span class="color-footer">Studio</span></a>
-    <p class="footer-text">Increase the flow of customers and
-        sales for your business with digital
-        marketing & growth solutions.</p>
+    <div class="container">
+      <a class="logo-footer link" href="./index.html">Web<span class="color-footer">Studio</span></a>
+      <p class="footer-text">Increase the flow of customers and
+          sales for your business with digital
+          marketing & growth solutions.</p>
+    </div>
 </footer>
 </body>
 </html>
