--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
       <div class="container">
         <h2 class="section-title">What are we doing</h2>
           <ul class="section-list list">
-              <li><img src="./images/img1.jpg" alt="monitor" width="360"></li>
-              <li><img src="./images/img2.jpg" alt="telephone" width="360"></li>
-              <li><img src="./images/img3.jpg" alt="laptop and phone" width="360"></li>
+              <li class="list-img"><img src="./images/img1.jpg" alt="monitor" width="360"></li>
+              <li class="list-img"><img src="./images/img2.jpg" alt="telephone" width="360"></li>
+              <li class="list-img"><img src="./images/img3.jpg" alt="laptop and phone" width="360"></li>
           </ul>
       </div>
       </section>
       <section class="section-team">
-       <div class="container">
+       <div class="container team-container">
          <h2 class="section-title">Our Team</h2>
          <ul class="section-list-team list">
              <li class="list-team">
