--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       </section>
    </main>
    <footer class="footer">
-    <div class="container">
+    <div class="container footer-container">
         <a class="logo-footer link" href="./index.html">Web<span class="color-footer">Studio</span></a>
           <p class="footer-text">Increase the flow of customers and
              sales for your business with digital
