--- a/portfolio.html
+++ b/portfolio.html
@@ -15,28 +15,28 @@
 </head>
 <body>
     <header class="header">
-        <div class="container">
-          <nav class="navigation">
-              <a class="header-logo link" href="./index.html">Web<span class="color">Studio</span></a>
-              <ul class="site-nav list">
-                  <li class="list-nav"><a class="link-nav link" href="./index.html">Studio</a></li>
-                  <li class="list-nav"><a class="link-nav link" href="./portfolio.html">Portfolio</a></li>
-                  <li class="list-nav"><a class="link-nav link" href="">Contacts</a></li>
-              </ul>
-          </nav>
-          <address class="contacts">
-              <ul class="contacts-item list">
-                  <li>
-                      <a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                  </li>
-                  <li>
-                      <a class="contact-link link" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
-                  </li>
-              </ul>
-          </address>
-        </div>
+      <div class="container container-header">
+        <nav class="navigation">
+          <a class="header-logo link" href="./index.html">Web<span class="color">Studio</span></a>
+          <ul class="site-nav list">
+            <li class="list-nav"><a class="link-nav link" href="./index.html">Studio</a></li>
+            <li class="list-nav"><a class="link-nav link" href="./portfolio.html">Portfolio</a></li>
+            <li class="list-nav"><a class="link-nav link" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="contacts">
+          <ul class="contacts-item list">
+            <li>
+              <a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+              <a class="contact-link link" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
-   <main>
+    <main>
        <section class="portfoilo-section">
         <div class="container">
           <h1 class="visually-hidden">our work</h1>
