--- a/portfolio.html
+++ b/portfolio.html
@@ -41,73 +41,73 @@
         <div class="container">
           <h1 class="visually-hidden">our work</h1>
            <ul class="list-btn list">
-              <li><button type="button" class="portfolio-btn link">All</button></li>
-              <li><button type="button" class="portfolio-btn link">Web Site</button></li>
-              <li><button type="button" class="portfolio-btn link">App</button></li>
-              <li><button type="button" class="portfolio-btn link">Design</button></li>
-              <li><button type="button" class="portfolio-btn link">Marketing</button></li>
+              <li class="btn-item"><button type="button" class="portfolio-btn link">All</button></li>
+              <li class="btn-item"><button type="button" class="portfolio-btn link">Web Site</button></li>
+              <li class="btn-item"><button type="button" class="portfolio-btn link">App</button></li>
+              <li class="btn-item"><button type="button" class="portfolio-btn link">Design</button></li>
+              <li class="btn-item"><button type="button" class="portfolio-btn link">Marketing</button></li>
            </ul>
              <!-- What are we doing -->
               <ul class="list-presentation list">
                 <li class="list-made">
                   <a href="" class="list-img link">
-              <img src="./images/img8.jpg" alt="banking app interface" width="360">
+              <img class="portfolio-img" src="./images/img8.jpg" alt="banking app interface" width="360">
               <h2 class="title-portfolio">Banking App Interface Concept</h2>
               <p class="text-portfolio">App</p>
               </a>
               </li>
                 <li class="list-made">
                   <a href="" class="list-img link">
-              <img src="./images/img9.jpg" alt="image of qr code on phone" width="360">
+              <img class="portfolio-img" src="./images/img9.jpg" alt="image of qr code on phone" width="360">
               <h2 class="title-portfolio">Cashless Payment</h2>
               <p class="text-portfolio">Marketing</p>
               </a>
               </li>
                 <li class="list-made">
                   <a href="" class="list-img link">
-              <img src="./images/img10.jpg" alt="laptop" width="360">
+              <img class="portfolio-img" src="./images/img10.jpg" alt="laptop" width="360">
               <h2 class="title-portfolio">Meditation App</h2>
               <p class="text-portfolio">App</p>
               </a>
               </li>
                 <li class="list-made"> 
                   <a href="" class="list-img link">
-              <img src="./images/img11.jpg" alt="car interior" width="360">
+              <img class="portfolio-img" src="./images/img11.jpg" alt="car interior" width="360">
               <h2 class="title-portfolio">Taxi Service</h2>
               <p class="text-portfolio">Marketing</p>
               </a>
               </li>
                 <li>
                   <a href="" class="list-img link">
-              <img src="./images/img12.jpg" alt="phone desktop" width="360">
+              <img class="portfolio-img" src="./images/img12.jpg" alt="phone desktop" width="360">
               <h2 class="title-portfolio">Screen Illustrations</h2>
               <p class="text-portfolio">Design</p>
               </a>
               </li>
                 <li class="list-made">
                   <a href="" class="list-img link">
-              <img src="./images/img13.jpg" alt="girl in glasses" width="360">
+              <img class="portfolio-img" src="./images/img13.jpg" alt="girl in glasses" width="360">
               <h2 class="title-portfolio">Online Courses</h2>
               <p class="text-portfolio">Marketing</p>
               </a>
               </li>
               <li class="list-made">
                   <a href="" class="list-img link">
-              <img src="./images/img14.jpg" alt="instagram stories" width="360">
+              <img class="portfolio-img" src="./images/img14.jpg" alt="instagram stories" width="360">
               <h2 class="title-portfolio">Instagram Stories Concept</h2>
               <p class="text-portfolio">Design</p>
               </a>
               </li>
                 <li class="list-made">
                   <a href="" class="list-img link">
-              <img src="./images/img15.jpg" alt="bag with vegetables" width="360">
+              <img class="portfolio-img" src="./images/img15.jpg" alt="bag with vegetables" width="360">
               <h2 class="title-portfolio">Organic Food</h2>
               <p class="text-portfolio">Web Site</p>
               </a>
               </li>
                 <li class="list-made">
                   <a href="" class="list-img link">
-              <img src="./images/img16.jpg" alt="coffee cup pattern" width="360">
+              <img class="portfolio-img" src="./images/img16.jpg" alt="coffee cup pattern" width="360">
               <h2 class="title-portfolio">Fresh Coffee</h2>
               <p class="text-portfolio">Web Site</p>
               </a>
