--- a/index.html
+++ b/index.html
@@ -84,23 +84,31 @@
          <ul class="section-list-team list">
              <li class="list-team">
                  <img src="./images/img4.jpg" alt="Man Product Designer" width="265">
-                 <h3 class="list-title">Mark Guerrero</h3>
-                 <p class="list-text">Product Designer</p>
+                 <div class="group">
+                    <h3 class="list-title">Mark Guerrero</h3>
+                    <p class="list-text">Product Designer</p>
+                 </div>
              </li>
              <li class="list-team">
                  <img src="./images/img5.jpg" alt="Man Frontend Develope" width="265">
-                 <h3 class="list-title">Tom Ford</h3>
-                 <p class="list-text">Frontend Developer</p>
+                 <div class="group">
+                    <h3 class="list-title">Mark Guerrero</h3>
+                    <p class="list-text">Product Designer</p>
+                 </div>
              </li>
              <li class="list-team">
                  <img src="./images/img6.jpg" alt="Woman Marketing" width="265">
-                 <h3 class="list-title">Camila Garcia</h3>
-                 <p class="list-text">Marketing</p>
+                 <div class="group">
+                    <h3 class="list-title">Mark Guerrero</h3>
+                    <p class="list-text">Product Designer</p>
+                 </div>
              </li>
              <li class="list-team">
                  <img src="./images/img7.jpg" alt="ManUI Designe" width="265">
-                 <h3 class="list-title">Daniel Wilson</h3>
-                 <p class="list-text">UI Designer</p>
+                 <div class="group">
+                    <h3 class="list-title">Mark Guerrero</h3>
+                    <p class="list-text">Product Designer</p>
+                 </div>
              </li>
          </ul>
        </div>
