--- a/portfolio.html
+++ b/portfolio.html
@@ -85,7 +85,7 @@
               </div>
               </a>
               </li>
-                <li>
+                <li class="list-made">
                   <a href="" class="list-img link">
               <img class="portfolio-img" src="./images/img12.jpg" alt="phone desktop" width="360">
               <div class="categories">
