--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         </nav>
         <address class="contacts">
         <ul class="contacts-item list">
-           <li>
+           <li class="cont-info">
                <a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                        </li>
-           <li>
+           <li class="cont-info">
                <a class="contact-link link" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
            </li>
         </ul>
